@@ -24,4 +24,30 @@ public class Foo {
 }
      ]]></code>
     </test-code>
+
+    <test-code>
+        <description>#991 AvoidSynchronizedAtMethodLevel for static methods - bad case</description>
+        <expected-problems>1</expected-problems>
+        <code><![CDATA[
+public class Test {
+    public static synchronized void foo() {
+        // complete method is synchronized on Test.class
+    }
+}
+        ]]></code>
+    </test-code>
+
+    <test-code>
+        <description>#991 AvoidSynchronizedAtMethodLevel for static methods - good case</description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+public class Test {
+    public static void foo() {
+        synchronized(Test.class) {
+            // only a block is synchronized on Test.class
+        }
+    }
+}
+        ]]></code>
+    </test-code>
 </test-data>
